@@ -24,7 +24,7 @@ content of dictionary references.
   <active>yes</active>
  </contributor>
  <date>2012-10-03</date>
- <time>17:07:47</time>
+ <time>18:29:10</time>
  <version>
   <release>2.9.0</release>
   <api>2.9.0</api>
@@ -45,6 +45,7 @@ will not be print anymore on standard output when --report-file option used
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
+- standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
  </notes>
  <contents>
   <dir baseinstalldir="Bartlett" name="/">
@@ -1338,6 +1339,7 @@ will not be print anymore on standard output when --report-file option used
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
+- standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
    </notes>
   </release>
   <release>
